fix: gaps

--- a/Project/index.css
+++ b/Project/index.css
@@ -114,7 +114,7 @@ header {
 
 section.top-section {
   display: flex;
-  padding-top: 160px;
+  padding-top: 100px;
 }
 .top-section-content {
   width: 50%;
@@ -160,8 +160,6 @@ section.top-section {
   width: 100%;
 }
 
-
-
 /*============================================= Features section  ==========================================================================*/
 
 .features-section-heading {
@@ -169,7 +167,7 @@ section.top-section {
   font-size: var(--section-heading-font);
   font-weight: var(--boldFontWeight);
   line-height: 44.65px;
-  padding: 77px 0px;
+  padding: 50px 0px;
 }
 .essential-features-panel-box {
   display: flex;
@@ -205,7 +203,7 @@ section.top-section {
   width: 62%;
 }
 .feature-section-cards {
-  margin: 47px 0px 95px 0px;
+  margin: 20px 0px 60px 0px;
 }
 
 /*================================================ Future Section  =========================================================================*/
